# TrabajoGrupal5

./: Adolescencia.cpp  Adolescencia.h  Adultez.cpp  Adultez.h  CMakeLists.txt  Cerebro.cpp  Cerebro.h  Infancia.cpp  Infancia.h  MayoriaDeEdad.cpp  MayoriaDeEdad.h  Memoria.cpp  Memoria.h  Zonas.cpp  Zonas.h
